static files work

--- a/getaslot/local_settings.sample
+++ b/getaslot/local_settings.sample
@@ -10,8 +10,9 @@ STATIC_ROOT = os.path.join(PROJECT_ROOT, "site_media", "static")
 STATIC_URL = "/site_media/static/"
 
 STATICFILES_DIRS = [
-    os.path.join(PROJECT_ROOT, "media"),    
+    os.path.join(PROJECT_ROOT, "site_media/media"),    
 ]
+
 
 ADMIN_MEDIA_PREFIX = posixpath.join(STATIC_URL, "admin/")
 
